# astrology

./: .Cargo.toml.swp  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh  build_examples.sh  build_nodejs.sh  rustfmt.toml  solution.sh  todo.sh
examples/: data_exemple.json  ferris-astro-example.rs  html_chart.rs  svg.rs  svg_transit.rs  transit.json
lib/astrology_draw_svg/: .gitignore  Cargo.toml
lib/astrology_draw_svg/examples/: debug.rs
lib/astrology_draw_svg/src/: lib.rs  svg_draw_bodies.rs  sweconst.rs
lib/libswe-sys/: .gitignore  Cargo.toml  build.rs  lipo.sh  make_c.sh  make_c_ios.sh  make_c_ios_simulator.sh
lib/libswe-sys/examples/: data_exemple.json  debug.rs
lib/libswe-sys/src/: 2  lib.rs  raw.rs  sweconst.rs
lib/libswe-sys/src/swerust/: mod.rs
lib/libswe-sys/src/swerust/swe02/: handler.rs
lib/libswe-sys/src/swerust/swe03/: handler.rs
lib/libswe-sys/src/swerust/swe07/: handler.rs
lib/libswe-sys/src/swerust/swe08/: handler.rs
lib/libswe-sys/src/swerust/swe14/: handler.rs  mod.rs
lib/libswe-sys/src/swerust/swe17/: handler.rs
lib/libswe-sys/src/swisseph/2.08/src/: .Makefile.swp  .gitignore  .swetest.c.swp  CMakeLists.txt  Makefile  compile.h  swetest  swetest.c  swetest.sh
lib/libswe-sys/src/swisseph/sweph/: se09999s.se1
src/: lib.rs  main.rs
src/astrology_draw_svg/: .svg_draw.rs.swp  1  bodies_const.rs  html_draw.rs  mod.rs  svg_draw.rs  svg_draw_angle.rs  svg_draw_aspect.rs  svg_draw_bodies.rs  svg_draw_house.rs  svg_draw_numbers.rs  svg_draw_signs.rs  svg_draw_transit.rs  svg_draw_transit.rs.bak  svg_draw_zodiac.rs
src/cfg/: args.rs  mod.rs  parse.rs  validator.rs
src/svg_draw/: angles.rs  aspects.rs  bodies.rs  compute_chart.rs  houses.rs  mod.rs  numbers.rs  svg_draw.rs  zodiacs.rs
src/swisseph/2.08/doc/: swephprg.htm  swisseph.htm
src/swisseph/2.08/src/: .gitignore
