[package]
name = "astrology"
version = "0.1.0"
authors = ["Stéphane Bressani <s.bressani@bluewin.ch>"]
edition = "2018"
build = "build.rs"
keyword = ["astrology", "swiss ephemem", "planet", "ephemeris"]
documentation = "https://github.com/stephaneworkspace/astrology"
repository = "https://github.com/stephaneworkspace/astrology"
description = "Astrology lib connected to the C lib Swiss ephemeris"

[lib]
crate-type = ["lib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.1"
libswe-sys = { version = "0.1.0" path = "lib/libswe-sys" }
astrology_draw_svg = { version = "0.1.0" path = "lib/astrology_draw_svg" }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
serde_derive = "1.0.102"
strum = "0.17.1"
strum_macros = "0.17.1"

[build-dependencies]
cbindgen = "0.12"
