[package]
name = "libswe-sys"
version = "0.1.0"
links = "libswe"
#build = "build.rs"
edition = "2018"

[dependencies]
libc = "0.2"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
serde_derive = "1.0.102"

#[build-dependencies]
#cc = { version = "1.0", features = ["parallel"] }
#pkg-config = "0.3"
